--- a/.github/workflows/run-check.yml
+++ b/.github/workflows/run-check.yml
@@ -23,4 +23,6 @@ jobs:
         run: npm install
 
       - name: run check
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run check
