--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@octokit/action": "^6.0.6",
     "octokit": "^3.1.1",
     "zx": "^7.2.3"
   }
