--- a/.github/workflows/run-check.yml
+++ b/.github/workflows/run-check.yml
@@ -6,6 +6,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   run-check:
     # The type of runner that the job will run on
