--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "@octokit/action": "^6.0.6",
     "octokit": "^3.1.1",
+    "typescript": "^5.2.2",
     "zx": "^7.2.3"
   }
 }
